Update profile and fix Err for Responsive extra spacing in right side

--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -3,7 +3,20 @@
     margin: 0;
 }
 
-#profile, #about, #education, #hobbies {
+html, body {
+    overflow-x: hidden;
+}
+
+:root {
+    --primary-color: #00a6ff;
+}
+
+#profile {
+    min-height: 650px;
+    padding-bottom: 50px;
+}
+
+#about, #education, #hobbies {
     min-height: 550px;
     padding-bottom: 50px;
 }
@@ -15,10 +28,31 @@
     background-clip: inherit;
 }
 
+#profile #profile-logo {
+    z-index: 2;
+    top: 100px;
+    left: 60%;
+    background-color: var(--primary-color);
+    box-shadow: 2px 3px 10px 2px var(--primary-color);
+    border-radius: 50%;
+}
+
+#profile #profile-content {
+    z-index: 1;
+    width: 80%;
+    height: fit-content;
+    left: 5%;
+    top: 200px;
+    background-color: #4d4d4d8c;
+    box-shadow: 0 2px 10px 2px var(--primary-color);
+    border-radius: 100px 50% / 50% 0;
+    border-right: none;
+    padding: 30px;
+}
+
 #profile img {
-    margin: 100px auto 20px auto;
-    width: 350px;
-    height: 300px;
+    width: 100%;
+    height: 100%;
     border-radius: 50%;
     box-shadow: 0 0 10px 0.2px black;
 }
@@ -31,23 +65,50 @@
     transition-timing-function: linear;
 }
 
-#profile h1 {
-    background: -webkit-linear-gradient(180deg, #b3b57d, #4d4d4d);
+#profile h1.heading {
+    background: -webkit-linear-gradient(150deg, #b3b57d, #ffffff);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     font-size: 45px;
     width: fit-content;
-    margin: 0 auto;
     border-bottom: 0.01rem solid white;
 }
 
+@media only screen and (max-width: 767px) {
+    #profile #profile-logo {
+        width: 300px;
+        height: 300px;
+        left: 50%;
+    }
+
+    #profile #profile-content {
+        position: relative;
+        left: -30px;
+    }
+
+        @media only screen and (max-width: 767px) {
+            #profile #profile-logo {
+                width: 300px;
+                height: 300px;
+                top: 2rem;
+                left: 10rem;
+            }
+        
+            #profile #profile-content {
+                top: 14rem;
+                left:3rem;
+            }
+        }
+}
+
+
 ul>li {
-    /* list-style: none; */
+    list-style: none;
     line-height: 35px;
 }
 
 #about {
-    background-color: rgb(81, 137, 139);
+    background-color: rgb(28, 57, 58);
     background-size: cover;
     padding: 30px;
 }
@@ -157,6 +218,7 @@ ul>li {
     from {
         transform: rotateY(0deg);
     }
+
     to {
         transform: rotatey(359deg);
     }
@@ -170,8 +232,4 @@ ul>li {
 
 .show-img {
     width: 290px;
-}
-
-.bg-fluid {
-    /* background-color: #4d4d4d3d; */
 }
